# selinux_please_lie_to_me

./: COPYING  README.md  setup.cfg  tox.ini
selinux/: __init__.py
