[metadata]
name = selinux_please_lie_to_me
version = 1.0.0
author = Gonéri Le Bouder
author-email = goneri@lebouder.net
home-page = https://github.com/goneri/selinux_please_lie_to_me
description = Fake selinux module that always says SELinux is off
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = selinux
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 27
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/goneri/selinux_please_lie_to_me/issues

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7
packages = selinux
setup_requires =
    setuptools >=38.3.0

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
